--- a/builded_page/package.json
+++ b/builded_page/package.json
@@ -1,12 +1,14 @@
 {
   "name": "dnd-character-sheets-example",
-  "homepage": ".",
+  "homepage": "https://c0coleplub0.github.io/dnd-character-sheets-fr-translated/",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "node ../node_modules/react-scripts/bin/react-scripts.js build",
+    "build": "react-scripts build",
     "test": "node ../node_modules/react-scripts/bin/react-scripts.js test",
+    "predeploy": "NODE_OPTIONS=--openssl-legacy-provider npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
   },
   "dependencies": {
